Remove waste setTextBackgroundColor() for internal KTextEdit

Removed setTextBackgroundColor() for internal KTextEdit as it
seems to be useless and leads to QTBUG-21522
(http://bugreports.qt.nokia.com/browse/QTBUG-21522).

REVIEW: 102698